@@ -61,9 +61,8 @@ host: 127.0.0.1
 username: User01
 password: 123-321-1234567
 databaseName: DatabaseName
-#Sychronize FROM Database TO local storage when server starts?
-sync-DBtoLOCAL: false
 #Sychronize FROM local storage TO Database when server starts?
+#To backup jails.yml data to your DataBase for future recovery
 sync-LOCALtoDB: false
 
 
